--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins in here
+.buttons(@width, @padding, @color, @justify, @radius, @text, @margin){
+    display: flex;
+    width: @width;
+    justify-content: @justify;
+    padding: @padding;
+    background-color: @color;
+    border-radius: @radius;
+    color: @text;
+    font-size: 18px;
+    margin-right: @margin;
+}
