--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation Styles here
+navbar{
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 25px;
+    padding-bottom: 25px;
+    border-bottom: dashed 2px @navigation-border;
+
+    nav{
+    width: 300px;
+    margin-left: 60px;
+    margin-right: 30px;
+    display:flex;
+    justify-content: space-between;
+}
+a{
+    font-size: 16px;
+    font-weight: 500;
+    color: black;
+    text-decoration: none;
+  }
+}
