--- a/css/index.css
+++ b/css/index.css
@@ -146,6 +146,11 @@ h5 {
 h1 {
   font-size: 4rem;
 }
+@media (max-width:500px) {
+  h1 {
+    font-size: 3rem;
+  }
+}
 h2 {
   font-size: 3.2rem;
   padding-bottom: 10px;
@@ -179,6 +184,12 @@ navbar {
   padding-bottom: 25px;
   border-bottom: dashed 2px #C0C0C0;
 }
+@media (max-width:500px) {
+  navbar {
+    flex-direction: column;
+    padding-bottom: 10px;
+  }
+}
 navbar nav {
   width: 300px;
   margin-left: 60px;
@@ -186,10 +197,17 @@ navbar nav {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width:500px) {
+  navbar nav {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
 navbar a {
   font-size: 16px;
   font-weight: 500;
-  color: black;
+  color: #212529;
   text-decoration: none;
 }
 .footer {
@@ -209,10 +227,11 @@ navbar a {
   padding-bottom: 10px;
   border-bottom: 2px dashed #C0C0C0;
 }
-.home header a {
-  font-size: 14px;
-  color: gray;
-  text-decoration: none;
+@media (max-width:500px) {
+  .home header {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 .home header img {
   padding-bottom: 20px;
@@ -223,16 +242,40 @@ navbar a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width:500px) {
+  .home .content-section {
+    margin-left: 20px;
+    margin-right: 20px;
+    flex-direction: column;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+@media (max-width:500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding-right: 0;
+  }
 }
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
-.home .content-section .img-content img {
+@media (max-width:500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding-left: 0;
+  }
+}
+.home .content-section img {
   border-radius: 10px;
+}
+@media (max-width:500px) {
+  .home .content-section img {
+    width: 100%;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -242,16 +285,39 @@ navbar a {
   padding-left: 1%;
   padding-right: 0;
 }
+@media (max-width:500px) {
+  .home .inverse-content .text-content {
+    order: -1;
+  }
+}
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
+}
+@media (max-width:500px) {
+  .home .inverse-content .img-content {
+    width: 100%;
+    padding-right: 0;
+  }
 }
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width:500px) {
+  .home .content-destination {
+    width: 90%;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
+}
+@media (max-width:500px) {
+  .home .content-destination img {
+    width: 490px;
+  }
 }
 .home .content-pick {
   padding-top: 30px;
@@ -259,18 +325,37 @@ navbar a {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width:500px) {
+  .home .content-pick {
+    margin-left: 20px;
+    margin-right: 20px;
+    flex-direction: column;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width:500px) {
+  .home .content-pick .destination {
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
 .home .content-pick .destination .btn {
   display: flex;
   width: 83%;
   justify-content: center;
   padding: 14px;
-  background-color: #028077;
+  background-color: #17A2B8;
   border-radius: 15px;
   color: white;
   font-size: 18px;
   margin-right: 20px;
+}
+@media (max-width:500px) {
+  .home .content-pick .destination .btn {
+    width: 100%;
+  }
 }
