--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,41 +1,59 @@
 .home {
-
+  
   header{
     display:flex;
     flex-direction: column;
     padding-bottom: 10px;
     border-bottom: 2px dashed @navigation-border;
-    a{
-      font-size: 14px;
-      color: gray;
-      text-decoration: none;
+    @media @mobile{
+      margin-left: 20px;
+      margin-right: 20px;
     }
+    
     img{
       padding-bottom: 20px;
     }
-  }
+}
 
+  
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media @mobile{
+      margin-left: 20px;
+      margin-right: 20px;
+      flex-direction: column;
+    }
 
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile{
+        width: 100%;
+        padding-right: 0;
+        }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
 
-      img {
-        border-radius: 10px;
+      @media @mobile{
+      width: 100%;
+      padding-left: 0;
       }
     }
-  }
+      img {
+        border-radius: 10px;
+        @media @mobile{
+          width: 100%;
+        }
+      }
+    }
+  
 
   .inverse-content {
     padding-bottom: 30px;
@@ -44,20 +62,35 @@
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+      @media @mobile{
+        order: -1;
+      }
     }
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+      @media @mobile{
+        width: 100%;
+       padding-right: 0;
+      }
     }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @mobile{
+      width: 90%;
+      margin-left: 20px;
+      margin-right: 20px;
+    }
 
     img {
       border-radius: 10px;
+      @media @mobile{
+        width: 490px;
+      }
     }
   }
 
@@ -66,13 +99,27 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @mobile{
+      margin-left: 20px;
+      margin-right: 20px;
+      flex-direction: column;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile{
+        width: 100%;
+        padding-left: 40px;
+        padding-right: 40px;
+      }
       .btn{
-        .buttons(83%, 14px,#028077, center, 15px, white, 20px);
+        .buttons(83%, 14px,@eastern-blue, center, 15px, white, 20px);
+        @media @mobile{
+          width: 100%;
+        }
       }
     }
   }
-}// home
+}
+// home
