--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,18 +9,28 @@ navbar{
     margin-top: 25px;
     padding-bottom: 25px;
     border-bottom: dashed 2px @navigation-border;
-
+    
+    @media @mobile{
+        flex-direction: column;
+        padding-bottom: 10px;
+    }
+    
     nav{
     width: 300px;
     margin-left: 60px;
     margin-right: 30px;
     display:flex;
     justify-content: space-between;
-}
-a{
-    font-size: 16px;
-    font-weight: 500;
-    color: black;
-    text-decoration: none;
-  }
+    @media @mobile{
+        margin-top: 20px;
+        width: 100%;
+        justify-content: space-around;
+    }
+    }
+    a{
+        font-size: 16px;
+        font-weight: 500;
+        color:@shark;
+        text-decoration: none;
+    }
 }
