--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,7 +14,14 @@ navbar{
         flex-direction: column;
         padding-bottom: 10px;
     }
+    h1{
+        .keyframes(fade-in;{
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+            });
     
+        .animation(fade-in 0.3s linear infinite alternate)
+    }
     nav{
     width: 300px;
     margin-left: 60px;
