--- a/css/index.css
+++ b/css/index.css
@@ -190,6 +190,35 @@ navbar {
     padding-bottom: 10px;
   }
 }
+navbar h1 {
+  -webkit-animation: fade-in 0.3s linear infinite alternate;
+  -moz-animation: fade-in 0.3s linear infinite alternate;
+  animation: fade-in 0.3s linear infinite alternate;
+}
+@-moz-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 navbar nav {
   width: 300px;
   margin-left: 60px;
